--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Peliculas Populares</title>
 </head>
 <body>
-
+    <h3>Hola, soy Yas. Este es un ejercicio de JavaScript con asincronismo y una API.</h3>
     <div class="contenedor" id="contenedor"></div>
 
     <div class="paginacion">
@@ -15,6 +15,6 @@
         <button id="btnSiguiente">Siguiente</button>
     </div>
     
-    <script src="index.js"></script>
+    <script src="index.js">
 </body>
 </html>
